<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="philricciardi.pace.com.autostat.Mechanic_login_activity$PlaceholderFragment">

    <ImageView
        android:id="@+id/autostat_logo"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:src="@drawable/autostat_logo"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/input_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/autostat_logo">

        <TextView
            android:id="@+id/mechanic_sign_in"
            android:text="@string/mechanic_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/input_email_label"
            android:text="@string/input_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_below="@+id/mechanic_sign_in"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="220dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mechanic_sign_in"
            android:layout_toRightOf="@+id/input_email_label"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/input_password_label"
            android:text="@string/input_password_label"
            android:layout_below="@+id/input_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="160dp"
            android:layout_below="@+id/input_email"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_password_label"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/mechanic_sign_in_button"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_below="@+id/input_password"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:onClick="mechanicSignIn"
            />

        <TextView
            android:id="@+id/news_users_label"
            android:text="@string/new_users_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/mechanic_sign_in_button"
            />

        <TextView
            android:id="@+id/input_name_signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/news_users_label"
            android:text="@string/input_name_label"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/input_name_signup"
            android:layout_width="220dp"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_below="@+id/news_users_label"
            android:layout_toRightOf="@+id/input_email_signup_label"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/input_email_signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_name_signup_label"
            android:text="@string/input_email_label"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/input_email_signup"
            android:layout_width="220dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_name_signup"
            android:layout_toRightOf="@+id/input_email_signup_label"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/input_password_label_signup"
            android:text="@string/input_password_label"
            android:layout_below="@+id/input_email_signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/input_password_signup"
            android:layout_width="160dp"
            android:layout_below="@+id/input_email_signup_label"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_password_label_signup"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/input_confirm_password_label_signup"
            android:text="@string/input_confirm_password_label"
            android:layout_below="@+id/input_password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/input_confirm_password_signup"
            android:layout_width="160dp"
            android:layout_below="@+id/input_password_signup"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_password_label_signup"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/shop_dropdown_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_shop_name_label"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_confirm_password_label_signup"
            />

        <Spinner
            android:id="@+id/shop_dropdown"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:prompt="@string/shop_spinner_default_prompt"
            android:layout_toRightOf="@+id/shop_dropdown_label"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_confirm_password_signup"
            />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_below="@+id/shop_dropdown"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            android:onClick="createMechanicAccount"
            />

    </RelativeLayout>

</RelativeLayout>
</ScrollView>
